# assistant-ui-a2a

./: .gitignore  README.md
a2a-backend/: .env.example  main.py  pyproject.toml
a2a-server/: .env.example  agent_executor.py  main.py  pyproject.toml
frontend/: package-lock.json  package.json
frontend/app/: A2AAgentTool.tsx  MyRuntimeProvider.tsx  globals.css  layout.tsx  page.tsx
